--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
               <div class="search-result">
                 <img class="search-result-cover" src="/img/cover.jpg" />
                 <div class="search-result-text">
-                  <h3 class="search-result-title">Windfall</h3>
+                  <h3 class="search-result-title">A Good Song Never Dies</h3>
                   <h6 class="search-result-artist">TheFatRat</h6>
                 </div>
               </div>
@@ -98,7 +98,22 @@
                 <div class="song">
                   <div class="song-details-wrapper">
                     <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
+                      <div class="marquee-container">
+                      <h3 class="song-details-title">A Good Song Never Dies</h3>
+                      </div>
+                      <h6 class="song-details-artist">Saint Motel</h6>
+                    </div>
+                  </div>
+                  <div class="song-cover-wrapper">
+                    <img class="song-cover" src="/img/cover.jpg" />
+                  </div>
+                </div>
+                <div class="song">
+                  <div class="song-details-wrapper">
+                    <div class="song-details-text-wrapper">
+                      <div class="marquee-container">
+                        <h3 class="song-details-title">Windfall</h3>
+                      </div>
                       <h6 class="song-details-artist">TheFatRat</h6>
                     </div>
                   </div>
@@ -109,8 +124,12 @@
                 <div class="song">
                   <div class="song-details-wrapper">
                     <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
+                      <div class="marquee-container">
+                      <h3 class="song-details-title">Fly Away With Me</h3>
+                      </div>
+                      <div class="marquee-container">
                       <h6 class="song-details-artist">TheFatRat</h6>
+                      </div>
                     </div>
                   </div>
                   <div class="song-cover-wrapper">
@@ -120,8 +139,12 @@
                 <div class="song">
                   <div class="song-details-wrapper">
                     <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
-                      <h6 class="song-details-artist">TheFatRat</h6>
+                      <div class="marquee-container">
+                      <h3 class="song-details-title">White Flag</h3>
+                      </div>
+                      <div class="marquee-container">
+                      <h6 class="song-details-artist">Delta Heavy</h6>
+                      </div>
                     </div>
                   </div>
                   <div class="song-cover-wrapper">
@@ -131,8 +154,12 @@
                 <div class="song">
                   <div class="song-details-wrapper">
                     <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
-                      <h6 class="song-details-artist">TheFatRat</h6>
+                      <div class="marquee-container">
+                      <h3 class="song-details-title">Do I Wanna Know?</h3>
+                      </div>
+                      <div class="marquee-container">
+                      <h6 class="song-details-artist">Arctic Monkeys</h6>
+                      </div>
                     </div>
                   </div>
                   <div class="song-cover-wrapper">
@@ -142,8 +169,12 @@
                 <div class="song">
                   <div class="song-details-wrapper">
                     <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
-                      <h6 class="song-details-artist">TheFatRat</h6>
+                      <div class="marquee-container">
+                      <h3 class="song-details-title">Thunderclouds</h3>
+                      </div>
+                      <div class="marquee-container">
+                      <h6 class="song-details-artist">Sia, Diplo, Labrinth, LSD</h6>
+                      </div>
                     </div>
                   </div>
                   <div class="song-cover-wrapper">
@@ -153,36 +184,19 @@
                 <div class="song">
                   <div class="song-details-wrapper">
                     <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
-                      <h6 class="song-details-artist">TheFatRat</h6>
+                      <div class="marquee-container">
+                      <h3 class="song-details-title">Sil - favoured Nations Remix</h3>
+                      </div>
+                      <div class="marquee-container">
+                      <h6 class="song-details-artist">Giselle, Favoured Nations</h6>
+                      </div>
                     </div>
                   </div>
                   <div class="song-cover-wrapper">
                     <img class="song-cover" src="/img/cover.jpg" />
                   </div>
                 </div>
-                <div class="song">
-                  <div class="song-details-wrapper">
-                    <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
-                      <h6 class="song-details-artist">TheFatRat</h6>
-                    </div>
-                  </div>
-                  <div class="song-cover-wrapper">
-                    <img class="song-cover" src="/img/cover.jpg" />
-                  </div>
-                </div>
-                <div class="song">
-                  <div class="song-details-wrapper">
-                    <div class="song-details-text-wrapper">
-                      <h3 class="song-details-title">Windfall</h3>
-                      <h6 class="song-details-artist">TheFatRat</h6>
-                    </div>
-                  </div>
-                  <div class="song-cover-wrapper">
-                    <img class="song-cover" src="/img/cover.jpg" />
-                  </div>
-                </div>
+
               </div>
             </div>
             <div class="space-div"></div>
@@ -218,6 +232,7 @@
     <script src="/js/navigation.js" defer></script>
     <script src="/js/search.js" defer></script>
     <script src="/js/scroll.js" defer></script>
+    <script src="/js/marquee.js" defer></script>
     <!-- <script src="/js/mediasession.js" defer></script> -->
   </body>
 </html>
