search funciton added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,16 +73,14 @@
               </button>
             </div>
             <div class="search-results-container">
-              <h3 class="search-result-default">
-                We couldn't find anything =(
-              </h3>
-              <div class="search-result">
+              
+              <!-- <div class="search-result">
                 <img class="search-result-cover" src="/img/cover.jpg" />
                 <div class="search-result-text">
                   <h3 class="search-result-title">A Good Song Never Dies</h3>
                   <h6 class="search-result-artist">TheFatRat</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
 
             <div class="user-buttons-container">
@@ -208,7 +206,7 @@
           <h1>Windfall</h1>
           <h3>TheFatRat</h3>
           <div class="player-container">
-            <audio src="/stream" id="player"></audio>
+            <audio src="/stream/yj4lua4ts3i0sy3d530g7z" id="player"></audio>
             <div class="controls-container">
               <img onclick="seekToStart()" src="/img/previous.svg" />
               <img onclick="toggleState()" src="/img/play.svg" id="play-btn" />
