--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -35,8 +35,8 @@
   <body>
     <div class="main-container">
       <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="text" class="uid" name="uid" disabled />
         <input type="file" name="song" />
+        <input type="text" class="uid" name="uid" />
         <input type="text" name="title" />
         <input type="text" name="artist" />
         <input type="text" name="album" />
