made song change on click

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,8 +203,8 @@
       </div>
       <div class="overhead-container">
         <div class="overhead-container-content">
-          <h1>Windfall</h1>
-          <h3>TheFatRat</h3>
+          <h1 class="player-song-title">Windfall</h1>
+          <h3 class="player-song-artist">TheFatRat</h3>
           <div class="player-container">
             <audio src="/stream/yj4lua4ts3i0sy3d530g7z" id="player"></audio>
             <div class="controls-container">
