--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
                 <i class="fas fa-search"></i>
               </button>
             </div>
-            <div class="search-results-container">
+            <div class="search search-results-container">
               
               <!-- <div class="search-result">
                 <img class="search-result-cover" src="/img/cover.jpg" />
