--- a/public/css/index.css
+++ b/public/css/index.css
@@ -47,10 +47,12 @@ h6 {
   height: 100vh;
   max-height: 100vh;
   width: 100%;
-  background-image: url(../img/cover.jpg);
+  background-color: #000;
   background-position: bottom;
   background-size: cover;
   overflow-y: hidden;
+  -webkit-transition: background-image 0.2s ease-in-out;
+  transition: background-image 0.2s ease-in-out;
 }
 
 .navigation-container {
