--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,9 @@
             <div class="search search-results-container">
               
               <!-- <div class="search-result">
+                <div class="search-result-cover-wrapper">
                 <img class="search-result-cover" src="/img/cover.jpg" />
+                </div>
                 <div class="search-result-text">
                   <h3 class="search-result-title">A Good Song Never Dies</h3>
                   <h6 class="search-result-artist">TheFatRat</h6>
