--- a/public/css/index.css
+++ b/public/css/index.css
@@ -48,7 +48,7 @@ h6 {
   max-height: 100vh;
   width: 100%;
   background-color: #000;
-  background-position: bottom;
+  background-position: center;
   background-size: cover;
   overflow-y: hidden;
   -webkit-transition: background-image 0.2s ease-in-out;
@@ -173,10 +173,16 @@ h6 {
   color: #000 !important;
 }
 
+.search-result-cover-wrapper {
+  height: 50px;
+  width: 90px;
+  margin-right: 15px;
+  overflow: hidden;
+}
+
 .search-result-cover {
   display: inline-block;
-  height: 100%;
-  margin-right: 15px;
+  width: 100%;
 }
 
 .search-result-text {
