--- a/views/library.ejs
+++ b/views/library.ejs
@@ -66,7 +66,7 @@
       <table>
         <thead>
           <tr>
-            <th>UID</th>
+            <th>Index</th>
             <th>Title</th>
             <th>Artist</th>
             <th>Album</th>
