added seek to player

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,12 @@
       media="screen"
       href="/css/scrollbar.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="/css/progress.css"
+    />
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -218,6 +224,11 @@
               <h6 class="current-time">00:00</h6>
               <div class="progress-bar">
                 <div class="progress-bar-slider"></div>
+                <div class="progress-bar-hover-slider">
+                  <div class="hover-timestamp-container">
+                    <h6 class='hover-timestamp'>00:00</h6>
+                  </div>
+                </div>
               </div>
               <h6 class="duration">01:30</h6>
             </div>
