--- a/public/css/index.css
+++ b/public/css/index.css
@@ -414,16 +414,35 @@ h6 {
 }
 
 .progress-bar {
+  position: relative;
   margin: 0 10px;
   width: 66%;
   background: white;
   height: 10px;
+  cursor: pointer;
+}
+
+.progress-bar-hover-slider {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+  height: 10px;
+  z-index: 1;
+  background-color: transparent;
+}
+
+.hover-timestamp-container {
+  transform: translate(-175%, -125%);
+  z-index: 10;
+  visibility: hidden;
 }
 
 .progress-bar-slider {
   width: 0;
   background: #e22849;
   height: 100%;
+  z-index: 5;
 }
 
 .info-container {
