--- a/public/css/index.css
+++ b/public/css/index.css
@@ -213,16 +213,26 @@ h6 {
 .nav-control-button {
   height: 3vh;
   cursor: pointer;
+  margin-right: 15px;
 }
 
-.signup-btn {
+.user-btn {
   background-color: transparent;
   color: #fff;
+  border: 1px solid #fff;
+  border-radius: 15px;
   font-weight: 700;
   font-size: 0.6rem;
   height: 5vh;
-  border: none;
   text-transform: uppercase;
+  transition: color 0.5s;
+  transition: background-color 0.5s;
+  letter-spacing: 0.1rem;
+}
+
+.user-btn:hover {
+  color: #000;
+  background-color: #fff;
 }
 
 .login-btn {
@@ -417,9 +427,30 @@ h6 {
   position: relative;
   margin: 0 10px;
   width: 66%;
-  background: white;
+  background-color: white;
   height: 10px;
   cursor: pointer;
+  
+}
+
+.progress-bar-buffering{
+  animation-name: bufferAnim;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes bufferAnim {
+  0%{
+    opacity: 1;
+  }
+
+  50%{
+    opacity: 0.33;
+  }
+
+  100%{
+    opacity: 1;
+  }
 }
 
 .progress-bar-hover-slider {
