--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -48,7 +48,7 @@ h6 {
   height: 100vh;
   max-height: 100vh;
   width: 100%;
-  background-color: #000;
+  background: linear-gradient(#000, #fff);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
