--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
     <div class="main-container">
       <div class="navigation-container">
         <div class="side-bar-container">
-          <img class="side-bar-logo" src="/static/img/logo.png" />
+          <img class="side-bar-logo" src="/static/img/logo.PNG" />
           <button class="side-bar-btn">
             Liked <i class="fas fa-heart"></i>
           </button>
